Alteração no index, style e criação do script

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </label>
 
             <label  class="label-login">
-                <span>Senha</span>
+                <span class="span-active">Senha</span>
                 <input type="password" name="password" class="input">
             </label>
             <div class="login-icons">
