Criando a função focus no input

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
             </label>
 
             <label  class="label-login">
-                <span class="span-active">Senha</span>
+                <span>Senha</span>
                 <input type="password" name="password" class="input">
             </label>
             <div class="login-icons">
-                <button type="button" class="button-icons">
+                <button type="button" class="button-icons" id="facebook">
                     <img src="/imagens/facebook-icon.png" alt="Facebook">
                 </button>
-                <button type="button" class="button-icons">
+                <button type="button" class="button-icons" id="google">
                     <img src="/imagens/google-icon.png" alt="Google">
                 </button>
-                <button type="button" class="button-icons">
+                <button type="button" class="button-icons" id="apple">
                     <img src="/imagens/apple-icon.png" alt="Apple">
                 </button>
             </div>
