ajustando caminho da pagina de imagens

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <section class="login">
         <div class="wrepper">
-          <img src="/imagens/logo.png" class="login-logo" />
+          <img src="./imagens/logo.png" class="login-logo" />
           <h1 class="login-title">Fazer Login</h1>
 
           <label class="label-login">
@@ -25,13 +25,13 @@
           </label>
           <div class="login-icons">
             <button type="button" class="button-icons" id="facebook">
-              <img src="/imagens/facebook-icon.png" alt="Facebook" />
+              <img src="./imagens/facebook-icon.png" alt="Facebook" />
             </button>
             <button type="button" class="button-icons" id="google">
-              <img src="/imagens/google-icon.png" alt="Google" />
+              <img src="./imagens/google-icon.png" alt="Google" />
             </button>
             <button type="button" class="button-icons" id="apple">
-              <img src="/imagens/apple-icon.png" alt="Apple" />
+              <img src="./imagens/apple-icon.png" alt="Apple" />
             </button>
           </div>
           <label for="" class="login-checkbox">
